docs: add ZGC configuration guide and scale worker pool description